--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
 <head>
   <title>Accordion Assignment10</title>
+  
   <link rel="stylesheet" type="text/css" href="css/main.css">
 
 </head>
 
 <body>
 
-  <div class="container">
+
+<div class="container">
 
 
     <div class="topsection">
-
-
       <a href="#"><h2>Section One</h2></a>
         <p>Lorem ipsum dolor sit amet, nostrud utroque neglegentur mel id, ad duo quot omnis sensibus. Ad pro nulla eirmod nostrud. Eu pri facete adipiscing. Eu sed argumentum contentiones. In noluisse oportere per, pri an accumsan sapientem, eos at wisi putent impedit. Timeam evertitur expetendis usu no, eam et illud tation persecuti. Velit debitis pri ei.</p>
 
@@ -28,13 +28,9 @@
 
     <div class="bottomsection">
       <a href="#"><h2>Section Three</h2></a>
-        <p>Sumo tantas cum at. Te unum debet dissentiet vel, solet semper ut pro. Sale denique inciderint an mel, cu vix alienum voluptaria. Et justo indoctum eos, aliquid laboramus sea in. Per in alia mediocrem. Per primis putant explicari an.
-
-        Et nec tritani recusabo, vel aliquando persequeris ea. Pri summo dissentias in, semper sadipscing cu ius. Per atqui appareat ut, eos posse graece forensibus eu, modo enim definiebas quo at. Tantas omnium sed te. At rebum falli sea, eros inermis maluisset nam an.</p>
+        <p>Sumo tantas cum at. Te unum debet dissentiet vel, solet semper ut pro. Sale denique inciderint an mel, cu vix alienum voluptaria. Et justo indoctum eos, aliquid laboramus sea in. Per in alia mediocrem. Per primis putant explicari an. Et nec tritani recusabo, vel aliquando persequeris ea. Pri summo dissentias in, semper sadipscing cu ius.</p>
 
     </div>
-
-
 
 
   <script src="jquery.js"></script>
@@ -42,3 +38,6 @@
 
 </body>
 </html>
+
+      
+  
