tweaked html and main.js to look and perform better

--- a/index.html
+++ b/index.html
@@ -2,42 +2,64 @@
 <html>
 <head>
   <title>Accordion Assignment10</title>
-  
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
-
-
-<div class="container">
-
-
-    <div class="topsection">
+  <div class="container">
+    <div class="section grow">
       <a href="#"><h2>Section One</h2></a>
-        <p>Lorem ipsum dolor sit amet, nostrud utroque neglegentur mel id, ad duo quot omnis sensibus. Ad pro nulla eirmod nostrud. Eu pri facete adipiscing. Eu sed argumentum contentiones. In noluisse oportere per, pri an accumsan sapientem, eos at wisi putent impedit. Timeam evertitur expetendis usu no, eam et illud tation persecuti. Velit debitis pri ei.</p>
-
-    </div>
-
-    <div class="middlesection">
+      <p>
+      Lorem ipsum dolor sit amet, nostrud utroque neglegentur mel id, ad duo quot omnis sensibus.
+      Ad pro nulla eirmod nostrud. Eu pri facete adipiscing.
+      Eu sed argumentum contentiones. In noluisse oportere per, pri an accumsan sapientem, eos at wisi putent impedit.
+      Timeam evertitur expetendis usu no, eam et illud tation persecuti.
+      Velit debitis pri ei.
+      </p>
+      </div>
+    <div class="section">
       <a href="#"><h2>Section Two</h2></a>
-        <p>Sed ei debitis pericula, choro reprehendunt in mel. Duis dicit duo id, vel omnis veniam everti et, duo ullum equidem impedit ad. Eros democritum mea ut, alii agam gloriatur ea mea. Id nec rebum tractatos, ex ius eligendi senserit suavitate, te dicat fabulas ceteros nec. Quaeque oportere vulputate an duo, eruditi eligendi te quo. Fugit labore incorrupte vis an, aliquip alienum scaevola vis ne. Mel suscipit pertinax te.</p>
-
+      <p>
+      Sed ei debitis pericula, choro reprehendunt in mel
+      Duis dicit duo id, vel omnis veniam everti et, duo ullum equidem impedit ad
+      Eros democritum mea ut, alii agam gloriatur ea mea
+      Id nec rebum tractatos, ex ius eligendi senserit suavitate, te dicat fabulas ceteros nec
+      Quaeque oportere vulputate an duo, eruditi eligendi te quo
+      Fugit labore incorrupte vis an, aliquip alienum scaevola vis ne
+      Mel suscipit pertinax te.
+      </p>
     </div>
-
-
-    <div class="bottomsection">
+    <div class="section">
       <a href="#"><h2>Section Three</h2></a>
-        <p>Sumo tantas cum at. Te unum debet dissentiet vel, solet semper ut pro. Sale denique inciderint an mel, cu vix alienum voluptaria. Et justo indoctum eos, aliquid laboramus sea in. Per in alia mediocrem. Per primis putant explicari an. Et nec tritani recusabo, vel aliquando persequeris ea. Pri summo dissentias in, semper sadipscing cu ius.</p>
-
+      <p>
+      Sumo tantas cum at. Te unum debet dissentiet vel, solet semper ut pro.
+      Sale denique inciderint an mel, cu vix alienum voluptaria.
+      Et justo indoctum eos, aliquid laboramus sea in.
+      Per in alia mediocrem. Per primis putant explicari an.
+      Et nec tritani recusabo, vel aliquando persequeris ea.
+      Pri summo dissentias in, semper sadipscing cu ius.
+      
+      </p>
     </div>
-
-
-  <script src="jquery.js"></script>
+  </div>
+  <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
   <script src="main.js"></script>
-
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
 
       
   
